--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ng-bootstrap/ng-bootstrap": "^12.0.1",
     "@popperjs/core": "^2.10.2",
     "@types/three": "^0.139.0",
+    "angular-code-input": "^1.6.0",
     "bootstrap": "^5.1.3",
     "rxjs": "~7.5.0",
     "save": "^2.4.0",
@@ -32,7 +33,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.3.1",
-    "@angular/cli": "~13.3.1",
+    "@angular/cli": "^13.3.2",
     "@angular/compiler-cli": "~13.3.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
