--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "-": "0.0.1",
     "@angular/animations": "~13.3.0",
+    "@angular/cdk": "^13.3.2",
     "@angular/common": "~13.3.0",
     "@angular/compiler": "~13.3.0",
     "@angular/core": "~13.3.0",
+    "@angular/flex-layout": "^13.0.0-beta.38",
     "@angular/forms": "~13.3.0",
     "@angular/localize": "~13.3.0",
+    "@angular/material": "^13.3.2",
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
@@ -25,6 +28,7 @@
     "@types/three": "^0.139.0",
     "angular-code-input": "^1.6.0",
     "bootstrap": "^5.1.3",
+    "css3drenderer": "0.0.0",
     "rxjs": "~7.5.0",
     "save": "^2.4.0",
     "three": "^0.139.2",
